Added print statements to files

--- a/AST5765/homework/hw3/hw3_cesarinegraham.ipynb
+++ b/AST5765/homework/hw3/hw3_cesarinegraham.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "c7b7f2ef-4aad-4735-9530-a3f5a79106ab",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ae450865-391d-4c26-8f1f-cf32e425fe0d",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "49a34ea2-6189-49ab-9fae-1302af0adb1b",
    "metadata": {},
    "outputs": [],
@@ -36,66 +36,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "249e94a5-611f-4546-93b6-fe52f175ce16",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "64"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64\n"
+     ]
     }
    ],
    "source": [
     "# example for the support function docstring\n",
-    "square (8)"
+    "print ( square (8) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "8824d69d-ef39-435e-9ec0-c33764245e93",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([16,  4,  9])"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16  4  9]\n"
+     ]
     }
    ],
    "source": [
     "# example for the support function docstring\n",
     "a = np.array([4, 2, 3])\n",
-    "square(a)"
+    "print( square(a) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "38c1874d-d23b-4bfe-90c6-9ad11ad797e1",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[16,  4,  9],\n",
-       "       [ 4, 81, 49],\n",
-       "       [ 1,  4,  9]])"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[16  4  9]\n",
+      " [ 4 81 49]\n",
+      " [ 1  4  9]]\n"
+     ]
     }
    ],
    "source": [
@@ -105,51 +96,45 @@
     "    [2, 9, 7],\n",
     "    [1, 2, 3]\n",
     "])\n",
-    "square(d)"
+    "print( square(d) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "2673e64d-92f9-4562-9dfc-12abe9c524ba",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "13.690000000000001"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.690000000000001\n"
+     ]
     }
    ],
    "source": [
     "# example for the support function docstring\n",
-    "square(3.7)"
+    "print( square(3.7) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "f300d3ad-276f-4c6f-bfb5-14cf956c39b0",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(-7+24j)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(-7+24j)\n"
+     ]
     }
    ],
    "source": [
     "# example for the support function docstring\n",
-    "square(3 + 4j)"
+    "print( square(3 + 4j) )"
    ]
   },
   {
@@ -173,12 +158,12 @@
    ],
    "source": [
     "# example for the support function docstring\n",
-    "square(\"word\") #making sure the typeerror works"
+    "print( square(\"word\") ) #making sure the typeerror works"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "cca2bacf-1694-48b9-97da-59f25b40172a",
    "metadata": {},
    "outputs": [
@@ -186,34 +171,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 2 3 4 5 6 7 8 9]\n"
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[ 0  1  4  9 16 25 36 49 64 81]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0,  1,  4,  9, 16, 25, 36, 49, 64, 81])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#problem 2h\n",
     "#create an array test_square_1 with integers from 0 to 9. Import and call function square to square array test_square_1 and print the result\n",
     "\n",
+    "from hw3_cesarinegraham_support_functions import square #importing square\n",
+    "\n",
     "test_square_1 = np.arange(10) #array with int from 0 to 10\n",
     "print(test_square_1) #checking the array\n",
     "\n",
-    "from hw3_cesarinegraham_support_functions import square #importing square\n",
-    "square(test_square_1) "
+    "print( square(test_square_1) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "8d167210-c74d-4f0f-ae4c-f7efd0d7c8ba",
    "metadata": {},
    "outputs": [
@@ -225,27 +202,13 @@
       " [ 5.20833333  6.25        7.29166667  8.33333333  9.375     ]\n",
       " [10.41666667 11.45833333 12.5        13.54166667 14.58333333]\n",
       " [15.625      16.66666667 17.70833333 18.75       19.79166667]\n",
-      " [20.83333333 21.875      22.91666667 23.95833333 25.        ]]\n"
+      " [20.83333333 21.875      22.91666667 23.95833333 25.        ]]\n",
+      "[[  0.           1.08506944   4.34027778   9.765625    17.36111111]\n",
+      " [ 27.12673611  39.0625      53.16840278  69.44444444  87.890625  ]\n",
+      " [108.50694444 131.29340278 156.25       183.37673611 212.67361111]\n",
+      " [244.140625   277.77777778 313.58506944 351.5625     391.71006944]\n",
+      " [434.02777778 478.515625   525.17361111 574.00173611 625.        ]]\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0.        ,   1.08506944,   4.34027778,   9.765625  ,\n",
-       "         17.36111111],\n",
-       "       [ 27.12673611,  39.0625    ,  53.16840278,  69.44444444,\n",
-       "         87.890625  ],\n",
-       "       [108.50694444, 131.29340278, 156.25      , 183.37673611,\n",
-       "        212.67361111],\n",
-       "       [244.140625  , 277.77777778, 313.58506944, 351.5625    ,\n",
-       "        391.71006944],\n",
-       "       [434.02777778, 478.515625  , 525.17361111, 574.00173611,\n",
-       "        625.        ]])"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -256,12 +219,12 @@
     "test_square_2 = np.linspace(0, 25, 25).reshape(5, 5) #5x5 array w floats from 0 to 25\n",
     "print(test_square_2) #checking the array\n",
     "\n",
-    "square(test_square_2) "
+    "print( square(test_square_2) )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "3850744a-69f7-435c-9798-fa09fd0b4660",
    "metadata": {},
    "outputs": [
