--- a/PHY_415/11_14_-11_16-activity-FFT-applications.ipynb
+++ b/PHY_415/11_14_-11_16-activity-FFT-applications.ipynb
@@ -862,9 +862,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:base] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-base-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -876,7 +876,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.23"
   },
   "vscode": {
    "interpreter": {
@@ -885,5 +885,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
