--- a/homework/hw5/hw5_cesarinegraham.ipynb
+++ b/homework/hw5/hw5_cesarinegraham.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "998cff44-9564-4ff4-9ac1-d2386bc9d3ad",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "29db13c3-f4cd-4d51-8912-13e1ef52203b",
    "metadata": {},
    "outputs": [],
@@ -31,98 +31,87 @@
    "id": "e27452a3-222f-476e-8fe3-312bdff589d2",
    "metadata": {},
    "source": [
-    "### 2. (10 Points) Here you will continue the sigma-clipping we worked on during Practicum3. Repeat the steps from problem 2b) on the subsample you created in 2b), to make a sub-subsample.\n",
+    "#### 2. (10 Points) Here you will continue the sigma-clipping we worked on during Practicum3. Repeat the steps from problem 2b) on the subsample you created in 2b), to make a sub-subsample.\n",
     "\n",
-    "### Print the new mean, median, and standard deviation. How different are the final mean and median?\n",
+    "#### Print the new mean, median, and standard deviation. How different are the final mean and median?\n",
     "\n",
-    "### How close is the final standard deviation to that expected for the Poisson distribution? Will this method always remove every bad pixel?"
+    "#### How close is the final standard deviation to that expected for the Poisson distribution? Will this method always remove every bad pixel?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "c56c4b9e-b6e8-45d3-9d10-942ffaba5c2d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# documentation sources:\n",
-    "# https://numpy.org/doc/2.2/reference/random/generated/numpy.random.poisson.html\n",
-    "# https://numpy.org/doc/2.2/reference/random/generated/numpy.random.uniform.html\n",
-    "\n",
-    "# number of photons\n",
-    "N = 10000\n",
-    "\n",
-    "# creating our initial array\n",
-    "data_ccd = np.zeros(400)\n",
-    "# random.poisson(lam=1.0, size=None)\n",
-    "data_ccd[ :396] = np.random.poisson(N, 396)  #396 draws from a poisson distribution for 10,000 photons\n",
-    "\n",
-    "N1 = 0\n",
-    "N2 = 1e6\n",
-    "# random.uniform(low=0.0, high=1.0, size=None)\n",
-    "data_ccd [396: ]= np.random.uniform( N1, N2, 4)\n",
-    "\n",
-    "#print(data_ccd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "5ae1a6d2-9576-4936-aa6b-bce64d28f527",
+   "execution_count": 3,
+   "id": "e381eef7-ecc2-4f86-9073-a9084cf2b6b4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Raw data mean:  12665.041588871427 Raw data median:  9996.0\n",
-      "29578.980798159206\n",
-      "Filtered mean:  10181.694431905478 Filtered median:  9996.0\n"
+      "Raw data mean: 16437.65376169905\n",
+      "Raw data median: 10009.0\n",
+      "\n",
+      "Subsample mean: 10271.54870546943\n",
+      "Subsample median: 10008.0\n",
+      "Subsample std dev: 5302.611585529911\n",
+      "\n",
+      "Sub-subsample mean: 10005.123737373737\n",
+      "Sub-subsample median: 10007.5\n",
+      "Sub-subsample std dev: 93.46247743914314\n"
      ]
     }
    ],
    "source": [
-    "print(\"Raw data mean: \" , np.mean(data_ccd) , \"Raw data median: \" , np.median(data_ccd) )\n",
+    "# number of photons\n",
+    "N = 10000\n",
     "\n",
+    "# creating initial array\n",
+    "data_ccd = np.zeros(400)\n",
+    "data_ccd[:396] = np.random.poisson(N, 396)\n",
+    "data_ccd[396:] = np.random.uniform(0, 1e6, 4)\n",
+    "\n",
+    "print(\"Raw data mean:\", np.mean(data_ccd))\n",
+    "print(\"Raw data median:\", np.median(data_ccd))\n",
+    "\n",
+    "# ----- first sigma clip (subsample) -----\n",
     "sigma = np.std(data_ccd)\n",
     "med_ccd = np.median(data_ccd)\n",
     "\n",
     "low_range = med_ccd - 5*sigma\n",
-    "high_range = med_ccd =+ 5*sigma\n",
+    "high_range = med_ccd + 5*sigma\n",
     "\n",
-    "filtered_data_ccd = (data_ccd[(low_range < data_ccd) & (data_ccd < high_range)] )\n",
+    "filtered_data_ccd = data_ccd[(low_range < data_ccd) & (data_ccd < high_range)]\n",
     "\n",
-    "print(\"Filtered mean: \" , np.mean(filtered_data_ccd) , \"Filtered median: \" , np.median(filtered_data_ccd) )"
+    "print(\"\\nSubsample mean:\", np.mean(filtered_data_ccd))\n",
+    "print(\"Subsample median:\", np.median(filtered_data_ccd))\n",
+    "print(\"Subsample std dev:\", np.std(filtered_data_ccd))\n",
+    "\n",
+    "# ----- second sigma clip (sub-subsample) -----\n",
+    "sigma_2 = np.std(filtered_data_ccd)\n",
+    "med_2_ccd = np.median(filtered_data_ccd)\n",
+    "\n",
+    "low_range_2 = med_2_ccd - 5*sigma_2\n",
+    "high_range_2 = med_2_ccd + 5*sigma_2\n",
+    "\n",
+    "filtered_2_data_ccd = filtered_data_ccd[(low_range_2 < filtered_data_ccd) & (filtered_data_ccd < high_range_2)]\n",
+    "\n",
+    "print(\"\\nSub-subsample mean:\", np.mean(filtered_2_data_ccd))\n",
+    "print(\"Sub-subsample median:\", np.median(filtered_2_data_ccd))\n",
+    "print(\"Sub-subsample std dev:\", np.std(filtered_2_data_ccd))"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "cc5dce9f-7d2c-4371-80f4-5a1f57019b07",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### The median is lower than the mean due to the outliers in the raw dataset! After applying the mask (filter), the medians are still the same, but the mean is different and much closer to the value of the median."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "11ef4d60-4186-48c6-8a95-e98ae0fdb5db",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "29578.980798159206\n",
-      "3610.0963968934984\n",
-      "100.9043826199114\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(np.std(data_ccd))\n",
-    "print(np.std(filtered_data_ccd))\n",
-    "print(np.sqrt(np.mean(filtered_data_ccd)))"
+    "#### The mean of the subsample (first sigma clip) and the sub-subsample (second sigma clip) cahnges from about 10272 to 10005. This is showing us that more outlier datapoints (bad-pixels) have been removed and the mean has shifted closer to the median, which is 10008. The medians have remained the same after each sigma clipping.\n",
+    "\n",
+    "#### The final standard deviation is about 93.5. The standard deviation of a Poisson distribution is $\\sqrt{10000} = 100$. Therefore, I think our final standard deviation is pretty close!\n",
+    "\n",
+    "#### This method unfortunately will not remove every bad pixel. Some bad pixels will fall between the $5\\sigma$ ranges."
    ]
   },
   {
